--- a/Starter/Starter.vcxproj
+++ b/Starter/Starter.vcxproj
@@ -35,6 +35,8 @@
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="LoadingState.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MenuBackground.cpp" />
+    <ClCompile Include="MenuButton.cpp" />
     <ClCompile Include="MenuState.cpp" />
     <ClCompile Include="PauseState.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -66,6 +68,8 @@
     <ClInclude Include="Game.hpp" />
     <ClInclude Include="GameState.hpp" />
     <ClInclude Include="LoadingState.hpp" />
+    <ClInclude Include="MenuBackground.hpp" />
+    <ClInclude Include="MenuButton.hpp" />
     <ClInclude Include="MenuState.hpp" />
     <ClInclude Include="PauseState.hpp" />
     <ClInclude Include="Player.hpp" />
